# send_email_celery

./: .gitignore  README.md  manage.py  pyproject.toml
app/: tasks.py  views.py
send_mail_celery/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
