[tool.poetry]
name = "send-mail-django-celery-base"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "send_mail_django_celery_base"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
celery = "^5.2.7"
redis = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
